syntax = "proto3";
package mistral_runner;

// MistralRS plugin-specific settings
//
// NOTE: Currently, tool calling configuration is managed via environment variables
// (MISTRAL_GRPC_ENDPOINT, MISTRAL_MAX_ITERATIONS, etc.) for simplicity.
// This proto is reserved for future use when proto-based configuration is needed.
//
// See core/types.rs ToolCallingConfig for the actual configuration structure.
message MistralRunnerSettings {
  // Tool Calling gRPC configuration (reserved for future use)
  message ToolCallingConfig {
    // FunctionService gRPC endpoint (e.g., "http://localhost:50051")
    string grpc_endpoint = 1;
    // Maximum tool calling iterations (default: 3)
    uint32 max_iterations = 2;
    // Tool execution timeout in seconds (default: 30)
    uint32 tool_timeout_sec = 3;
    // Enable parallel tool execution (default: true)
    bool parallel_execution = 4;
    // gRPC connection timeout in seconds (default: 10)
    uint32 connection_timeout_sec = 5;
  }

  // Tool Calling settings (optional - currently uses environment variables instead)
  optional ToolCallingConfig tool_calling = 1;
}
